--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ images/lists_photos/thumbs_tiny/*.jpg
 !images/lists_photos/thumbs_medium/default.jpg
 !images/lists_photos/thumbs_tiny/default.jpg
 !images/lists_photos/originals/default.jpg
+vendor
